Name:		LHAPDF-haskell
Version:	0.0
Synopsis:	LHAPDF binding for Haskell 
Description: 	LHAPDF binding for Haskell   
License: 	GPLv3 
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Depends:	base>4
Build-Type: 	Simple

hs-source-dirs: src
ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
ghc-prof-options: -caf-all -auto-all

Exposed-Modules: 
		 HEP.LHAPDF